--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gray-matter": "^4.0.3",
     "next": "15.5.3",
     "next-mdx-remote": "^5.0.0",
+    "openai": "^6.9.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
